overflow bug fix

--- a/Annotation_Tool/src/main/java/org/example/frontend/Dashboard/Styles/Content.css
+++ b/Annotation_Tool/src/main/java/org/example/frontend/Dashboard/Styles/Content.css
@@ -1,7 +1,6 @@
 .content {
     width: 100%;
     padding: 40px;
-    padding-right: 30px;
 }
 
 .content-wrap {
@@ -12,6 +11,8 @@
 }
 
 .content-left {
+    display: flex;
+    flex-direction: column;
     width: 75%;
 }
 
@@ -63,13 +64,17 @@
 /* All PDFs Display */
 
 .content-all-pdfs {
-    overflow: auto;
-    margin-top: 40px;
-    margin-bottom: 60px;
+    margin-top: 20px;
+    margin-bottom: 40px;
 }
 
-.content-table {
-    padding-bottom: 10px;
+.table-content {
+    overflow: auto;
+    flex-grow: 1;
+    padding-bottom: 15px;
+
+    width: calc(100% + 20px);
+    height: 158px;
 }
 
 .table-line {
@@ -95,21 +100,19 @@
     position: relative;
 }
 
-.table-cell.name:hover {
+.table-content .table-line:hover {
     color: hsla(0, 0%, 0%, 1.00);
     cursor: pointer;
 }
 
-.table-line.first {
-    padding-top: 10px;
-    padding-bottom: 10px;
-
+.table-line.table-headers {
     border-bottom-style: solid;
     border-bottom-width: 1px;
     border-bottom-color: hsla(0, 0%, 0%, 0.10);
 
     color: hsla(0, 0%, 0%, 1.00);
     background-color: transparent;
+    font-weight: bold;
 }
 
 .table-cell .check {
@@ -122,6 +125,7 @@
 
 .content-bottom {
     display: flex;
+    flex-shrink: 0;
     grid-column-gap: 80px;
     grid-row-gap: 80px;
 }
@@ -133,6 +137,9 @@
 }
 
 .map-wrap {
+    flex-grow: 1;
+    overflow-y: auto;
+
     margin-top: 20px;
     border-radius: 10px;
 }
@@ -148,6 +155,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
+    transition-property: box-shadow;
+    transition-duration: 0.2s;
+    transition-timing-function: ease;
 }
 
 .grey-p {
@@ -160,6 +172,19 @@
     font-weight: 600;
     margin-bottom: 10px;
     margin-top: 0px;
+    color: #636363
+}
+
+.map-line:hover {
+    cursor: pointer;
+}
+
+.map-line:hover .big-p {
+    color: hsla(0, 0%, 0%, 1.00);
+}
+
+.map-line:hover .grey-p {
+    color: #636363;
 }
 
 /* Support Options Display */
@@ -170,6 +195,7 @@
     max-width: 360px;
     flex-direction: column;
     justify-content: space-between
+    margin-bottom: auto;
 }
 
 .support-wrap {
@@ -178,7 +204,7 @@
     justify-content: space-between;
     align-items: stretch;
 
-    min-height: 260px;
+    min-height: 230px;
     max-width: 220px;
     margin-top: 20px;
 
@@ -258,6 +284,7 @@
     align-items: center;
 
     margin-bottom: 10px;
+    margin-top: 1px;
     padding: 20px;
     border-radius: 10px;
     grid-column-gap: 10px;
@@ -273,13 +300,20 @@
 }
 
 .right-line:hover {
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.5);
+}
+
+.right-line:hover .big-p {
     color: hsla(0, 0%, 0%, 1.00);
+}
+
+.right-line:hover .grey-p {
+    color: #636363;
 }
 
 .right-button {
     display: flex;
-    width: 100%;
+    width: calc(100% + 20px);
     height: 45px;
     justify-content: center;
     align-items: center;
